--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <title>PasteBin</title>
 </head>
+    <form>
+        <label for="pasteContent">Write your content here:</label>
+        <br>
+        <textarea id="pasteContent" name="pasteContent" rows="4" cols="50">
+        </textarea>
 
+        <input type="submit" value="Submit">
+    </form>
 <body>
-    Hello World
+
 </body>
 </html>
